--- a/index.html
+++ b/index.html
@@ -1,38 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jquary Plugins</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/slick.css">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <div class="mainBanner">
-        <div class="sliders">
-            <div class="slider">
-                <div class="overlay"></div>
-            </div>
-            <div class="slider one">
-                <div class="overlay"></div>
-            </div>
-            <div class="slider two">
-                <div class="overlay"></div>
-            </div>
-            <div class="slider three">
-                <div class="overlay"></div>
-            </div>
-            <div class="slider four">
-                <div class="overlay"></div>
-            </div>
-        </div>
-    </div>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/slick.css" />
     
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
+  </head>
+  <body>
+    <div class="mainBanner">
+      <div class="sliders">
+        <div class="slider">
+          <div class="overlay"></div>
+        </div>
+        <div class="slider one">
+          <div class="overlay"></div>
+        </div>
+        <div class="slider two">
+          <div class="overlay"></div>
+        </div>
+        <div class="slider three">
+          <div class="overlay"></div>
+        </div>
+        <div class="slider four">
+          <div class="overlay"></div>
+        </div>
+      </div>
+    </div>
 
+    <div class="servicePart">
+      <div class="container">
+        <div class="row">
+          <div class="serviceText col-lg-12">
+            <h5>Our Service</h5>
+            <h3>Our Main Focus</h3>
+          </div>
+        </div>
+        <div class="serviceDiv">
+          <div class="row serviceSlider">
+            <div class="col-lg-4 serviceCard">
+              <div class="serviceImg py-5">
+                <img src="./images/service Card One.png" alt="" />
+              </div>
+              <h3>Rent A Home</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolorum hic at veritatis asperiores dolore atque vero est quia voluptate!</p>
+              <a href="#">Find More ------></a>
+            </div>
+            <div class="col-lg-4 serviceCard">
+              <div class="serviceImg py-5">
+                <img src="./images/service Card One.png" alt="" />
+              </div>
+              <h3>Rent A Home</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolorum hic at veritatis asperiores dolore atque vero est quia voluptate!</p>
+              <a href="#">Find More ------></a>
+            </div>
+            <div class="col-lg-4 serviceCard">
+              <div class="serviceImg py-5">
+                <img src="./images/service Card One.png" alt="" />
+              </div>
+              <h3>Rent A Home</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolorum hic at veritatis asperiores dolore atque vero est quia voluptate!</p>
+              <a href="#">Find More ------></a>
+            </div>
+            <div class="col-lg-4 serviceCard">
+              <div class="serviceImg py-5">
+                <img src="./images/service Card One.png" alt="" />
+              </div>
+              <h3>Rent A Home</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dolorum hic at veritatis asperiores dolore atque vero est quia voluptate!</p>
+              <a href="#">Find More ------></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./js/jquery-3.7.1.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/script.js"></script>
-</body>
+  </body>
 </html>
